# ros_spotmicro

./: README.md  build.bash  install.bash
src/dualsense_receiver/: package.xml  setup.cfg  setup.py
src/dualsense_receiver/dualsense_receiver/: dualsense_receiver.py
src/movement_controller/: package.xml  setup.cfg  setup.py
src/movement_controller/movement_controller/: base_state.py  command.py  gait_scheduler.py  kynematic.py  movement_controller.py  stance_controller.py  state.py  swing_controller.py
src/quadruped_launcher/: CMakeLists.txt  package.xml
src/quadruped_launcher/configs/: dualsense_receiver_config.yaml  movement_controller_config.yaml  servo_controller_config.yaml
src/quadruped_launcher/launch/: quadruped.launch.py
src/servo_controller/: package.xml  setup.py
src/servo_controller/servo_controller/: servo_controller.py
